SERVER-29396 maxAcceptableLogicalClockDriftSecs must be positive

Rename parameter to have the "Secs" unit at the end, and prevent it from being 0.