src/mongo/db/logical_clock.h
@@ -46,7 +46,7 @@ public:
     static LogicalClock* get(OperationContext* ctx);
     static void set(ServiceContext* service, std::unique_ptr<LogicalClock> logicalClock);
 
-    static constexpr Seconds kMaxAcceptableLogicalClockDrift =
+    static constexpr Seconds kMaxAcceptableLogicalClockDriftSecs =
         Seconds(365 * 24 * 60 * 60);  // 1 year
 
     /**
@@ -83,7 +83,7 @@ public:
 private:
     /**
      * Rate limiter for advancing logical time. Rejects newTime if its seconds value is more than
-     * kMaxAcceptableLogicalClockDrift seconds ahead of this node's wall clock.
+     * kMaxAcceptableLogicalClockDriftSecs seconds ahead of this node's wall clock.
      */
     Status _passesRateLimiter_inlock(LogicalTime newTime);
 
